--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 <div>
   <p>
     <mat-toolbar color="primary">
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span>Stanley Book service</span>
+      <img width="150px" src="/assets/lol.png"> 
+      <span style="margin-left: 10px;">book service</span>
       <span class="example-spacer"></span>
       <button mat-raised-button   class="example-icon favorite-icon"  (click)="openDialog()">
         <mat-icon>add_circle</mat-icon>ADD BOOK 
